# nanogpt_clone

./: .README.md.un~  README.md  pyproject.toml
src/0.numbers/models/: mnist_net.pkl
src/0.numbers/src/: eval.py  model.py  train.py  utils.py
